---
source: crates/jinja/minijinja/tests/test_parser.rs
description: "Hello {{ world }}!"
input_file: crates/jinja/minijinja/tests/parser-inputs/simple.txt
snapshot_kind: text
---
Ok(
    Template {
        children: [
            EmitRaw {
                raw: "Hello ",
            } @ 1:1-1:7,
            EmitExpr {
                expr: Var {
                    id: "world",
                } @ 1:7-1:18,
            } @ 1:7-1:18,
            EmitRaw {
                raw: "!",
            } @ 1:18-1:19,
        ],
    } @ 0:0-1:19,
)
